# dissarmv7

./: .gitignore  3  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  combo.rs  decoder.md  example  example.elf  example_runnable  log.rs  rustc-ice-2025-01-29T09_50_09-124908.txt  rustfmt.toml
.github/workflows/: cargo.yaml
arch/: Cargo.toml  README.md  rustfmt.toml
arch/src/: condition.rs  coproc.rs  lib.rs  register.rs  set_flags.rs  shift.rs  wrapper_types.rs
macros/: Cargo.toml
macros/src/: lib.rs
operation/: Cargo.toml  README.md
operation/src/: lib.rs
src/: architechture.rs  buffer.rs  condition.rs  decoder.rs  helpers.rs  lib.rs  main.rs  operation.rs  register.rs  test.rs
src/arch/: condition.rs  register.rs  set_flags.rs  shift.rs  wrapper_types.rs
src/asm/: b16.rs  b32.rs  halfword.rs  mod.rs  pseudo.rs  wholeword.rs  wrapper_types.rs
src/asm/b16/: a_5_2.rs  a_5_3.rs  a_5_4.rs  a_5_5.rs  a_5_6.rs  a_5_7.rs  a_5_8.rs  simply_defined.rs
src/asm/b32/: a5_10.rs  a5_12.rs  a5_13.rs  a5_14.rs  a5_15.rs  a5_16.rs  a5_17.rs  a5_18.rs  a5_19.rs  a5_20.rs  a5_21.rs  a5_22.rs  a5_23.rs  a5_24.rs  a5_25.rs  a5_26.rs  a5_27.rs  a5_28.rs  a5_29.rs  a5_30.rs  a6_5.rs  a6_7.rs  a6_8.rs  a6_9.rs  float.rs
src/asm/halfword/: A_5_7.rs  a_5_2.rs  a_5_3.rs  a_5_4.rs  a_5_5.rs  a_5_6.rs  a_5_7.rs  a_5_8.rs  simply_defined.rs
src/asm/wholeword/: A5_10.rs  A5_12.rs  A5_13.rs  A5_14.rs  A5_15.rs  A5_16.rs  A5_17.rs  A5_18.rs  A5_19.rs  A5_20.rs  A5_21.rs  A5_22.rs  A5_23.rs  A5_24.rs  A5_25.rs  A5_26.rs  A5_27.rs  A5_28.rs  A5_29.rs  A5_30.rs  a5_10.rs  a5_12.rs  a5_13.rs  a5_14.rs  a5_15.rs  a5_16.rs  a5_17.rs  a5_18.rs  a5_19.rs  a5_20.rs  a5_21.rs  a5_22.rs  a5_23.rs  a5_24.rs  a5_25.rs  a5_26.rs  a5_27.rs  a5_28.rs  a5_29.rs  a5_30.rs
thumb/: Cargo.toml  rustfmt.toml
thumb/src/: lib.rs
tmp/: register  shift.rs  wrapper_types.rs
