workspace = { members = [ "arch","thumb"] }
[package]
name = "dissarmv7"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = "1.0.14"
const-if = "0.1.3"
builder_derive = {path = "../builder_derive"}
arch = {path = "./arch" }
thumb = {path = "./thumb"}


# These should be feature flagged
general_assembly = {path= "../general_assembly"}
transpiler = {path = "../transpiler"}
