[package]
name = "disarmv7"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = "1.0.14"
const-if = "0.1.3"
builder_derive = {git="https://github.com/ivario123/builder_derive"}
arch = {path = "./arch" }
operation = {path = "./operation"}


# These should be feature flagged
general_assembly = {path= "../general_assembly"}
transpiler = {path = "../transpiler"}
