[package]
name = "disarmv7"
version = "0.0.2"
edition = "2021"
authors = ["Ivar Jönsson <ivajns-9@student.ltu.se>"]
repository = "https://github.com/ivario123/disarmv7"
license-file = "LICENSE"
keywords = ["disassembly", "embedded", "arm", "armv7"]

description = "Decodes armv7 instructions in to a rust enum."
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paste = "1.0.14"
builder_derive = "0.0.1"
