[package]
name = "arch"
version = "1.0.0"
edition = "2021"
repository = "https://github.com/ivario123/disarmv7"
license-file = "LICENSE"
keywords = ["disassembly", "embedded", "arm", "armv7"]

description = "Provides some armv7 architechture specific types."
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
